# cs236

./: CMakeLists.txt
proj2/: Database.cpp  Database.h  DatalogProgram.cpp  DatalogProgram.h  Graph.cpp  Graph.h  Interpreter.cpp  Interpreter.h  Node.cpp  Node.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  Predicate.cpp  Predicate.h  Relation.cpp  Relation.h  Rule.cpp  Rule.h  Scanner.cpp  Scanner.h  Scheme.cpp  Scheme.h  Token.cpp  Token.h  Tuple.cpp  Tuple.h  input.txt  input21.txt  main.cpp  run-tests.sh
proj2/project3-passoff/100/: answer101.txt  answer104.txt  input101.txt  input102.txt  input104.txt
proj2/project3-passoff/20/: answer21.txt  answer22.txt  answer24.txt  input22.txt  input24.txt
proj2/project3-passoff/40/: answer41.txt  answer42.txt  input41.txt  input42.txt
proj2/project3-passoff/60/: answer61.txt  answer62.txt  input61.txt  input62.txt
proj2/project3-passoff/80/: answer81.txt  answer82.txt  input81.txt  input82.txt
proj2/project4-passoff/project4-passoff/100/: answer101.txt  answer102.txt  input102.txt  input103.txt
proj2/project4-passoff1/: run-tests.sh
proj2/project4-passoff1/100/: answer103.txt  answer104.txt  answer108.txt  input101.txt  input105.txt
proj2/project4-passoff1/20/: answer21.txt  answer24.txt  input21.txt
proj2/project4-passoff1/40/: answer41.txt  answer42.txt  answer44.txt  input41.txt  input42.txt  input44.txt
proj2/project4-passoff1/60/: answer62.txt  input61.txt
proj2/project4-passoff1/80/: answer81.txt  answer82.txt  answer84.txt  input81.txt  input82.txt
proj2/project5-passoff/: run-tests.sh
(+54 files in other folders)
