cmake_minimum_required(VERSION 3.16.3)
project(236)

set(CMAKE_CXX_STANDARD 17)

add_executable(236 ../proj2/main.cpp ../proj2/Token.h ../proj2/Scanner.h ../proj2/Scanner.cpp ../proj2/Token.cpp ../proj2/Parser.cpp ../proj2/Parser.h ../proj2/Predicate.cpp ../proj2/Predicate.h ../proj2/Rule.cpp ../proj2/Rule.h ../proj2/Parameter.cpp ../proj2/Parameter.h ../proj2/DatalogProgram.cpp ../proj2/DatalogProgram.h ../proj2/Scheme.cpp ../proj2/Scheme.h ../proj2/Tuple.cpp ../proj2/Tuple.h ../proj2/Relation.cpp ../proj2/Relation.h ../proj2/Database.cpp ../proj2/Database.h ../proj2/Interpreter.cpp ../proj2/Interpreter.h)
